# hyper-static

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  server.rs
src/public/: hls.min.js  index.html
