[package]
name = "hyper-static"
authors = ["Jamie Brough <jamie@wavey.ai>"]
version = "0.1.0"
edition = "2021"

[dependencies]
hyper-util = { version = "0.1.3", features = ["full"] }
env_logger = "0.11.0"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
structopt = "0.3.26"
bytes = "1.5.0"
hyper = { version = "1.3.1", features = ["full"] }
http = "1"
regex = "1.10.2"
http-body-util = "0.1.1"
anyhow = "1.0.31"
quinn = { version = "0.10", default-features = false, features = [
  "runtime-tokio",
  "tls-rustls",
  "ring",
] }
rustls = { version = "0.21.0", features = ["quic"] }
h2 = "0.4.3"
xxhash-rust = { version = "0.8.10", features = ["xxh3", "const_xxh3"] }
h3 = { git = "https://github.com/hyperium/h3.git", rev = "eb79204" }
h3-quinn = { git = "https://github.com/hyperium/h3.git", rev = "eb79204" }
tls-helpers = "0.1.3"
mime_guess = "2.0.5"
evmap = { git = "https://github.com/jonhoo/evmap.git" }
path-clean = "1.0.1"
flate2 = "1.0.34"

[dev-dependencies]
tempfile = "3.13.0"

[profile.release]
opt-level = 3
strip = true
debug = false
codegen-units = 1
lto = true
